objects/customer1__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>branches__c</fullName>
        <label>branches</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>amazon</fullName>
                </value>
                <value>
                    <fullName>flipcart</fullName>
                </value>
                <value>
                    <fullName>olx</fullName>
                </value>
                <value>
                    <fullName>macys</fullName>
                </value>
                <value>
                    <fullName>walmart</fullName>
                </value>
                <value>
                    <fullName>target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>internet_activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>internet activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>package__c</fullName>
        <label>package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>phone_no__c</fullName>
        <label>phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>review_status__c</fullName>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ka</fullName>
                </value>
                <value>
                    <fullName>telangana</fullName>
                </value>
                <value>
                    <fullName>tn</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Edison</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>customer1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>